<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prometheus_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>prometheus_cpp_vendor</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>generate_parameter_library</depend>
  <depend>libstatistics_collector</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <exec_depend>examples_rclcpp_minimal_composition</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
